@startuml

class System {
    SDL_KeyCode[] m_events
    bool m_demandToQuit;

    void updateEvents()
    void printDocument()
    void loop();
    void executeAllCommands();
}

class File {
    String m_text
    String m_buffer
    int m_cursor
    int m_sizeOfSelection
    void copySelectionInBuffer()
    void writeContent(const char& content)
    std::string& getText()
    void setCursor(int number);
     int getCursor()
     void setSizeOfSelection(int newSize)
    int getSizeOfSelection()
    std::string getSelection()
	void pasteBuffer();
    int sizeOfBuffer()

}
System "1" *-- "file, 1" File


abstract class Command{
    SDL_KeyCode[] m_preconditions
    static File* m_file
    static History m_history
    bool checkPreconditions()
    void execute()
    static void linkFile(File file)
}
File "1" -- "1" Command
Command "1".. "n" Memento : crée les Memento
Command "1"*-- "1,m_history" History 

System "1" *- "n,m_commands" Command



class Select{
    void execute()
}
Command <|--- Select


class Copy{
    void execute()
}



class Paste{
    void execute()
}
Command <|--- Paste
Command <|--- Copy

class Cut{
    void execute()
}
Command <|--- Cut


class MoveCursor{
    void execute()
}
Command <|--- MoveCursor


class Write{
    bool checkPreconditions()
    void execute()
}
Command <|--- Write


class Remove{
    void execute()
}
class Cancel{
    void execute()
}
Command <|--- Cancel
class Restore{
    void execute()
}
Command <|--- Restore
Remove "1" *-- "file, 1" File


Command <|--- Remove

class History {
    Memento[] m_past
    Memento[] m_future
    File * m_file
    void cancel()
    void restore()
    void linkFile(File* file)
    void addMemento(Memento memento)
}
File "1"<-- History

abstract class Memento {
    int m_index
    String * text
    void execute(File* file)
}

History "1"-- "n" Memento

class Insertion {
    String removed
    void execute(File* file)
}
Memento <|-- Insertion

class Deletion {
    int sizeToRemove
    void execute(File* file)
}
Memento <|-- Deletion
@enduml